<resources>
    <string name="app_name">uas-android</string>
    <string name="todo">TODO</string>
    <string name="hari">Senin, 9 November 2020</string>
    <string name="suhu">24°C</string>
    <string name="class_controlling">CLASS CONTROLLING</string>
    <string name="lampu_depan">Lampu Depan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">login</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="myscholl_misale">MYSCHOLL MISALE</string>
    <string name="kelas_a">KELAS A</string>
    <string name="kelas_b">KELAS B</string>
    <string name="detail_data_pinjaman_kelas">DETAIL DATA PINJAMAN KELAS</string>
    <string name="nama">Nama</string>
    <string name="mulai">Mulai</string>
    <string name="selesai">Selesai</string>
    <string name="submit">Submit</string>
    <string name="controlling_listrik">Class Monitoring</string>
    <string name="peminjaman_ruangan">Peminjaman Ruangan</string>
    <string name="inventory_management">Inventory Management</string>
    <string name="cctv">CCTV</string>
    <string name="inventory">Total Inventory</string>
    <string name="jum">5</string>
    <string name="barang1">Lampu</string>
    <string name="jum2">5</string>
    <string name="title_activity_side_bar">SideBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="token">token</string>
    <string name="class_monitoring">Class Monitoring</string>
    <string name="keterangan">Keterangan</string>
    <string name="peminjaman_kelas">PEMINJAMAN KELAS</string>
    <string name="pinjaman_saya">Pinjaman Saya</string>

</resources>
