<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#66B5F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="67dp" />

        <TextView
            android:id="@+id/Judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/roboto_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/myscholl_misale"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:width="280dp"
            android:autofillHints=""
            android:background="@drawable/form"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="15dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="11dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="280dp"
            android:autofillHints=""
            android:background="@drawable/form"
            android:ems="10"
            android:foregroundGravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="15dp"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/remember"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lora"
                android:text="@string/remember_me"
                android:textColor="#FFFFFF" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:buttonTint="#6979F8"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_gravity="center|center_horizontal"
            android:background="@drawable/rounded"
            android:fontFamily="@font/actor"
            android:text="@string/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/lupa"
            android:layout_width="144dp"
            android:layout_height="31dp"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lora"
            android:gravity="center"
            android:text="@string/lupa_password"
            android:textColor="#FFFFFF" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="19dp" />

        <LinearLayout
            android:layout_width="362dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/belum"
                android:layout_width="114dp"
                android:layout_height="49dp"
                android:layout_weight="1"
                android:fontFamily="@font/lora"
                android:gravity="center"
                android:text="@string/belum_punya_akun"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/buat"
                android:layout_width="108dp"
                android:layout_height="29dp"
                android:layout_weight="1"
                android:background="@drawable/roundbuat"
                android:fontFamily="@font/actor"
                android:text="@string/buat_akun_baru" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            tools:context="com.example.android.uiudacity.MainActivity">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="match_parent"
                android:layout_height="226dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                android:src="@drawable/gambar"
                android:contentDescription="@string/todo" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>