<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InventoryActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:background="#66B5F8"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="left"
                android:layout_marginStart="11dp"
                android:layout_marginTop="-11dp"
                tools:srcCompat="@drawable/nav"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/class_controlling"
                android:textSize="21sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <TextView
                android:id="@+id/tv_kelas_inventory"
                android:text="@string/kelas_a"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="577dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="185dp">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="367dp"
                    android:layout_height="156dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/bginven"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/inventory"
                        android:textColor="#EEFFFFFF"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/jum"
                        android:textColor="#FFFFFF"
                        android:textSize="36sp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="131dp">

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="349dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/lamp"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="right|center_horizontal|center_vertical"
                    android:layout_marginEnd="45dp"
                    app:srcCompat="@drawable/lampu"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="45dp"
                    android:gravity="center"
                    android:text="@string/barang1"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/jum2"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>