<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailPinjamanActivity"
    android:background="#66B5F8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="38dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:fontFamily="@font/roboto_medium"
            android:foregroundGravity="center_horizontal"
            android:text="@string/detail_data_pinjaman_kelas"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="45dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="37dp" />

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="298dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:inputType="none"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:hint="@string/nama"
            android:textColor="#9999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="125dp"
            android:autofillHints="" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <LinearLayout
            android:layout_width="298dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_mulai"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:foregroundGravity="center_horizontal"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:hint="@string/mulai"
                android:textColor="#9999"
                tools:layout_editor_absoluteX="59dp"
                tools:layout_editor_absoluteY="196dp"
                android:autofillHints="" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/edt_selesai"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:background="@drawable/search_layout"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:foregroundGravity="center_horizontal"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingRight="15dp"
                android:paddingBottom="10dp"
                android:hint="@string/selesai"
                android:textColor="#9999"
                tools:layout_editor_absoluteX="218dp"
                tools:layout_editor_absoluteY="196dp"
                android:autofillHints="" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <EditText
            android:id="@+id/edt_keterangan"
            android:layout_width="298dp"
            android:layout_height="142dp"
            android:layout_gravity="center"
            android:layout_marginStart="54dp"
            android:layout_marginEnd="54dp"
            android:background="@drawable/search_layout"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/keterangan"
            android:inputType="text"
            android:paddingTop="0dp"
            android:textColor="#9999"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="265dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <Button
            android:id="@+id/btn_submit_pinjam"
            android:layout_width="119dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:text="@string/submit"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="428dp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="306dp"
            android:layout_height="282dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/gambar_detailpinjaman"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="476dp"
            android:contentDescription="@string/todo" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>