<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ControllActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:background="#66B5F8"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="left"
                android:layout_marginStart="11dp"
                android:layout_marginTop="-11dp"
                tools:srcCompat="@drawable/nav"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/class_controlling"
                android:textSize="21sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

            <SearchView
                android:layout_width="340dp"
                android:layout_height="48dp"
                android:background="@drawable/roundsearch">

            </SearchView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="201dp"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        tools:srcCompat="@drawable/bel"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:text="@string/kelas_a"
                        android:textColor="#FFFFFF" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="216dp"
                    android:layout_height="match_parent" >

                    <ImageButton
                        android:id="@+id/imageButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        tools:srcCompat="@drawable/bel"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:text="@string/kelas_b"
                        android:textColor="#FFFFFF" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>