<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailClassActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="158dp"
            android:background="#66B5F8"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="left"
                android:layout_marginStart="11dp"
                android:layout_marginTop="-11dp"
                tools:srcCompat="@drawable/nav"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/class_controlling"
                android:textSize="21sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="14dp" />

<!--            <SearchView-->
<!--                android:layout_width="340dp"-->
<!--                android:layout_height="48dp"-->
<!--                android:background="@drawable/roundsearch">-->
<!--            </SearchView>-->
            <TextView
                android:id="@+id/btn_inventory"
                android:text="Inventory"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="577dp"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="185dp">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="367dp"
                    android:layout_height="156dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/awan"
                    android:contentDescription="@string/todo" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="58dp"
                    android:layout_height="58dp"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginEnd="35dp"
                    app:srcCompat="@drawable/thermometer"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="45dp"
                    android:text="@string/suhu"
                    android:textColor="#E4FFFFFF"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/hari"
                    android:textColor="#EEFFFFFF"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="131dp">

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="349dp"
                    android:layout_height="106dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/lamp"
                    android:contentDescription="@string/todo" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="55dp"
                    android:ellipsize="none"
                    android:textColor="#C11F1717"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="right|center_horizontal|center_vertical"
                    android:layout_marginEnd="45dp"
                    app:srcCompat="@drawable/lampu"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lampu_depan"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>